tests/machine/x/c/map_nested_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_nested_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:68:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   68 |   map_int_bool_put(&_t2, "inner", 1);
      |                          ^~~~~~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:46:51: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:69:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   69 |   map_int_bool_put(&_t1, "outer", _t2);
      |                          ^~~~~~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:46:51: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:69:35: error: incompatible type for argument 3 of ‘map_int_bool_put’
   69 |   map_int_bool_put(&_t1, "outer", _t2);
      |                                   ^~~
      |                                   |
      |                                   map_int_bool
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:46:60: note: expected ‘int’ but argument is of type ‘map_int_bool’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:70:14: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   70 |   int data = _t1;
      |              ^~~
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:71:7: error: request for member ‘data’ in something not a structure or union
   71 |   data.data["outer"].data["inner"] = 2;
      |       ^
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:72:22: error: request for member ‘data’ in something not a structure or union
   72 |   printf("%d\n", data.data["outer"].data["inner"]);
      |                      ^

   1: #include <stdio.h>
